mod notebook test-functions add last function

--- a/test_functions.ipynb
+++ b/test_functions.ipynb
@@ -36427,35 +36427,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sentiment_analyisis = pd.read_csv(\"./data/data_to_functions/sentiment_analysis.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 534,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Sentiment', '2011', '2014', '2013', '2016', '2015', '2012', '2010'], dtype='object')"
-      ]
-     },
-     "execution_count": 534,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sentiment_analyisis.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 548,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_sentiment_analyisis = pd.read_csv(\"./data/data_to_functions/sentiment_analysis.csv\")\n",
+    "\n",
+    "\n",
     "def sentiment_analysis(year:int):\n",
     "    if not isinstance(year, int):\n",
     "        raise TypeError(\"The function wait a integer.\")            \n",
@@ -36473,28 +36447,29 @@
     "\n",
     "        return dicc_sentiments\n",
     "\n",
-    "    except IndexError:\n",
+    "    except KeyError:\n",
     "        return {\"Error\": f\"The function doesn't find {year}'s recommendations.\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Positive': 346, 'Neutral': 74, 'Negative': 112}"
-      ]
-     },
-     "execution_count": 550,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "sentiment_analysis() missing 1 required positional argument: 'year'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\diego\\OneDrive\\Escritorio\\LABS\\Steam-4-Proyect\\test_functions.ipynb Celda 79\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/diego/OneDrive/Escritorio/LABS/Steam-4-Proyect/test_functions.ipynb#Y205sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sentiment_analysis()\n",
+      "\u001b[1;31mTypeError\u001b[0m: sentiment_analysis() missing 1 required positional argument: 'year'"
+     ]
     }
    ],
    "source": [
-    "sentiment_analysis(2011)"
+    "sentiment_analysis()"
    ]
   }
  ],
